fix: collapsed width 480px

--- a/packages/ui-stencil/src/components/internal/orama-search-results/orama-search-results.scss
+++ b/packages/ui-stencil/src/components/internal/orama-search-results/orama-search-results.scss
@@ -75,7 +75,7 @@
   width: 300px;
 
   @media (--sm-min) {
-    width: $xs;
+    width: pxToRem(480);
   }
 }
 
